err/rxpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RXPY-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rxpy'...
Listing './lib/python3.5/site-packages/rxpy/alphabet'...
Listing './lib/python3.5/site-packages/rxpy/alphabet/_test'...
Listing './lib/python3.5/site-packages/rxpy/compat'...
Listing './lib/python3.5/site-packages/rxpy/engine'...
Listing './lib/python3.5/site-packages/rxpy/engine/simple'...
Listing './lib/python3.5/site-packages/rxpy/engine/simple/_test'...
Compiling './lib/python3.5/site-packages/rxpy/engine/simple/_test/re.py'...
***   File "./lib/python3.5/site-packages/rxpy/engine/simple/_test/re.py", line 43
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rxpy/engine/simple/_test/test_re.py'...
***   File "./lib/python3.5/site-packages/rxpy/engine/simple/_test/test_re.py", line 739
    raise ValueError, ('Test tuples should have 3 or 5 fields', t)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rxpy/graph'...
Listing './lib/python3.5/site-packages/rxpy/parser'...
Listing './lib/python3.5/site-packages/rxpy/parser/_test'...
Compiling './lib/python3.5/site-packages/rxpy/parser/_test/lib.py'...
***   File "./lib/python3.5/site-packages/rxpy/parser/_test/lib.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
